 06-Apr-2023  V1.708 Add support for entity_id_list cifType in DataTypeApplicationInfo
 26-Apr-2023  V1.709 Fix document pre-purge regex during load, and add regexPurge flag to control running that step
  8-May-2023  V1.710 Fix error handling in PdbxLoader to cause failure when documents fail to load
 19-May-2023  V1.711 Update DNS to PDB archive
 23-Sep-2023  V1.712 Add support for pdb_id_u cifType in DataTypeApplicationInfo
  6-Nov-2023  V1.713 Add maxStepLength argument to RepoLoadWorkflow
 21-Nov-2023  V1.714 Add support in json schema for min and unique items for sub-categories and iterable attributes
 15-Dec-2023  V1.715 Revert setting for mergeValidationReports
 19-Mar-2024  V1.716 Add quality check to PdbxLoader to ensure validation report data are loaded along with the primary data;
                     Begin updating PdbxLoader and RepoLoadEx to support weekly update workflow CLI requirements
 03-Apr-2024  V1.717 Add int_list cifType to DataTypeApplicationInfo
 09-Apr-2024  V1.718 Update RepoLoadExec CLI and RepoLoadWorkflow to support CLI usage from weekly-update workflow
  6-May-2024  V1.719 Updates to CLI utilities
  9-May-2024  V1.720 Adjust provider type exclusion input to accept a list of types; update setuptools config
 13-May-2024  V1.721 Update requirements
  1-Jul-2024  V1.722 Pylinting
 13-Aug-2024  V1.723 Update code for pymongo 4.x support
 10-Sep-2024  V1.724 Add load completion check for the number of nonpolymer entity instances with validation data
 22-Oct-2024  V1.725 Remove dependency on edmaps holdings file (no longer generating Map Coefficient MTZ files);
                     Add CLI support for performing final sanity check for ExDB loading and holdings in etl.load_ex.DbLoadingWorkflow task;
                     Update CI/CD testing to use python 3.10
 23-Dec-2024  V1.726 Skip integers that exceed max int32 in DataTransformFactory
  7-Jan-2025  V1.727 Handle "None" values in vrpt data