@@ -11,6 +11,7 @@
 #  26-Apr-2023 dwp Add regexPurge flag to control running regexp purge step during document load (with default set to False)
 #   7-Nov-2023 dwp Add maxStepLength parameter
 #  26-Mar-2024 dwp Add arguments and methods to support CLI usage from weekly-update workflow
+#  22-Jan-2025 mjt Add Imgs format option (for jpg/svg generation) to splitIdList()
 #
 ##
 __docformat__ = "restructuredtext en"
@@ -22,6 +23,8 @@ import logging
 import os
 import random
 import math
+import datetime
+from pathlib import Path
 
 from rcsb.db.cli.RepoHoldingsEtlWorker import RepoHoldingsEtlWorker
 from rcsb.db.cli.SequenceClustersEtlWorker import SequenceClustersEtlWorker
@@ -286,7 +289,11 @@ class RepoLoadWorkflow(object):
         holdingsFilePath = kwargs.get("holdingsFilePath", None)  # For CSMs: http://computed-models-internal-%s.rcsb.org/staging/holdings/computed-models-holdings-list.json
         loadFileListDir = kwargs.get("loadFileListDir")  # ExchangeDbConfig().loadFileListsDir
         loadFileListPrefix = databaseName + "_ids"  # pdbx_core_ids or pdbx_comp_model_core_ids
-        numSublistFiles = kwargs.get("numSublistFiles")  # ExchangeDbConfig().pdbxCoreNumberSublistFiles
+        numSublistFiles = kwargs.get("numSublistFiles", 1)  # ExchangeDbConfig().pdbxCoreNumberSublistFiles
+
+        incrementalUpdate = kwargs.get("incrementalUpdate", False)
+        targetFileDir = kwargs.get("targetFileDir", "")
+        targetFileSuffix = kwargs.get("targetFileSuffix", "_model-1.jpg")
         #
         mU = MarshalUtil(workPath=self.__cachePath)
         #
@@ -295,7 +302,12 @@ class RepoLoadWorkflow(object):
             if not holdingsFilePath:
                 holdingsFilePath = os.path.join(self.__cfgOb.getPath("PDB_REPO_URL", sectionName=self.__configName), "pdb/holdings/released_structures_last_modified_dates.json.gz")
             holdingsFileD = mU.doImport(holdingsFilePath, fmt="json")
+
+            if incrementalUpdate:
+                holdingsFileD = self.getTimeStampCheck(holdingsFileD, targetFileDir, targetFileSuffix)
+
             idL = [k.upper() for k in holdingsFileD]
+
             logger.info("Total number of entries to load: %d (obtained from file: %s)", len(idL), holdingsFilePath)
             random.shuffle(idL)  # randomize the order to reduce the chance of consecutive large structures occurring (which may cause memory spikes)
             filePathMappingD = self.splitIdListAndWriteToFiles(idL, numSublistFiles, loadFileListDir, loadFileListPrefix, holdingsFilePath)
@@ -309,10 +321,15 @@ class RepoLoadWorkflow(object):
                 holdingsFileBaseDir = self.__cfgOb.getPath("PDBX_COMP_MODEL_REPO_PATH", sectionName=self.__configName)
             holdingsFileD = mU.doImport(holdingsFilePath, fmt="json")
             #
+
             if len(holdingsFileD) == 1:
                 # Split up single holdings file into multiple sub-lists
                 holdingsFile = os.path.join(holdingsFileBaseDir, list(holdingsFileD.keys())[0])
                 hD = mU.doImport(holdingsFile, fmt="json")
+
+                if incrementalUpdate:
+                    hD = self.getTimeStampCheck(hD, targetFileDir, targetFileSuffix)
+
                 idL = [k.upper() for k in hD]
                 logger.info("Total number of entries to load for holdingsFile %s: %d", holdingsFile, len(idL))
                 filePathMappingD = self.splitIdListAndWriteToFiles(idL, numSublistFiles, loadFileListDir, loadFileListPrefix, holdingsFile)
@@ -324,6 +341,8 @@ class RepoLoadWorkflow(object):
                 for hF, count in holdingsFileD.items():
                     holdingsFile = os.path.join(holdingsFileBaseDir, hF)
                     hD = mU.doImport(holdingsFile, fmt="json")
+                    if incrementalUpdate:
+                        hD = self.getTimeStampCheck(hD, targetFileDir, targetFileSuffix)
                     idL = [k.upper() for k in hD]
                     logger.info("Total number of entries to load for holdingsFile %s: %d", holdingsFile, len(idL))
                     #
@@ -350,6 +369,22 @@ class RepoLoadWorkflow(object):
                 logger.error("Entry ID loading sublist file does not exist: %r", oPath)
 
         return ok
+
+    def getTimeStampCheck(self, hD, targetFileDir, targetFileSuffix):
+        res = hD.copy()
+        for pdbid, value in hD.items():
+            pathToItem = os.path.join(targetFileDir, pdbid + targetFileSuffix)
+            if isinstance(value, dict):
+                timeStamp = value["lastModifiedDate"]
+                value["modelPath"].lower()
+            else:
+                timeStamp = value
+            if Path(pathToItem).exists():
+                t1 = Path(pathToItem).stat().st_mtime
+                t2 = datetime.datetime.strptime(timeStamp, "%Y-%m-%dT%H:%M:%S%z").timestamp()
+                if t1 > t2:
+                    res.pop(pdbid)
+        return res
 
     def splitIdListAndWriteToFiles(self, inputList, nFiles, outfileDir, outfilePrefix, sourceFile):
         """Split input ID list into equally distributed sublists of size nFiles.
